--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="http://localhost:8080/style.css">
+    <title></title>
   </head>
   <body>
     <header>
-      <h1><a href="http://localhost:8080/">JavaScript</a></h1>
+      <h1><a href="http://localhost:8080/index.html">JavaScript</a></h1>
     </header>
     <nav>
       <ol>
